added projects section

--- a/profile.html
+++ b/profile.html
@@ -25,10 +25,9 @@
   <body>
 
     <!-- Navbar  -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbar-custom ">
-    <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
       <a class="navbar-brand" href="#">HIMANSHU SINGH</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
@@ -46,14 +45,13 @@
             <a class="nav-link" aria-current="page" href="#publication">Publications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Projects</a>
+            <a class="nav-link" aria-current="page" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#skills">Skills</a>
           </li>
         </ul>
       </div>
-    </div>
   </nav>
 
   <!-- About Section  -->
@@ -65,7 +63,7 @@
           <h3>ABOUT</h3>
         </div>
         <div class="section-content section-content-about">
-          <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
+          <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A & M University, College Station.
           </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
         </div>
       </section>
@@ -186,7 +184,7 @@
         <div>
           <p><b><a class='paper-title' href="https://raw.githubusercontent.com/cslev/doh_ml/main/DNS_over_HTTPS_identification.pdf" target="_blank">L. Csikor, H. Singh, M. S. Kang and D. M. Divakaran, "Privacy of DNS-over-HTTPS: Requiem for a Dream?", In proceedings of IEEE European Symposium on Security and Privacy, 2021.
 </a></b></p>
-          <p style='font-size:1rem;'><b>Abstract:</b>The recently proposed DNS-over-HTTPS (DoH) protocol is becoming increasingly popular in addressing the privacy concerns of exchanging plain-text DNS messages over potentially malicious transit networks (e.g., mass surveillance at ISPs). By employing HTTPS to encrypt DNS communications, DoH traffic inherently becomes indistinguishable from regular encrypted Web traffic, rendering active disruption (e.g., downgrading to the plain-text DNS) by transit networks extremely hard. In this work, we investigate whether DoH traffic is indeed indistinguishable from encrypted Web traffic. To this end, we collect several DoH traffic traces corresponding to 25 resolvers (including major ones, e.g., Google and Cloudflare) by visiting thousands of domains in Alexa’s list of top-ranked websites at different geographical locations and environments. Based on the collected traffic, we train a machine learning model to classify HTTPS traffic as either Web or DoH. With our DoH identification model in place, we show that an authoritarian ISP can identify ∼97.4% (∼90%) of the DoH packets correctly in a closed-world (open-world) setting while only misclassifying 1 in 10,000 Web packets. To counter this DoH identification model, we propose an effective mitigation technique, making the identification model impractical for ISPs to filter and consequently downgrade DoH to plain-text DNS communications.</p>
+          <p style='font-size:1rem;'><b>Abstract:</b> The recently proposed DNS-over-HTTPS (DoH) protocol is becoming increasingly popular in addressing the privacy concerns of exchanging plain-text DNS messages over potentially malicious transit networks (e.g., mass surveillance at ISPs). By employing HTTPS to encrypt DNS communications, DoH traffic inherently becomes indistinguishable from regular encrypted Web traffic, rendering active disruption (e.g., downgrading to the plain-text DNS) by transit networks extremely hard. In this work, we investigate whether DoH traffic is indeed indistinguishable from encrypted Web traffic. To this end, we collect several DoH traffic traces corresponding to 25 resolvers (including major ones, e.g., Google and Cloudflare) by visiting thousands of domains in Alexa’s list of top-ranked websites at different geographical locations and environments. Based on the collected traffic, we train a machine learning model to classify HTTPS traffic as either Web or DoH. With our DoH identification model in place, we show that an authoritarian ISP can identify ∼97.4% (∼90%) of the DoH packets correctly in a closed-world (open-world) setting while only misclassifying 1 in 10,000 Web packets. To counter this DoH identification model, we propose an effective mitigation technique, making the identification model impractical for ISPs to filter and consequently downgrade DoH to plain-text DNS communications.</p>
         </div>
         <div class="publication-content">
           <p><b><a class='paper-title' href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8389037&isnumber=8388962">H. Singh, V. Pallagani, V. Khandelwal and U. Venkanna, "IoT based smart home automation system using sensor node," 2018 4th International Conference on Recent Advances in Information Technology (RAIT), 2018, pp. 1-5, doi: 10.1109/RAIT.2018.8389037.</a></b></p>
@@ -197,6 +195,18 @@
       </div>
     </div>
 
+  </section>
+
+  <section id="projects">
+    <div class="section-padding">
+    </div>
+    <div class="section-header">
+      <h3>PROJECTS</h3>
+    </div>
+    <div class="section-content section-content-about">
+      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A & M University, College Station.
+      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+    </div>
   </section>
 
 
@@ -263,7 +273,7 @@
               </div>
 
             <div class="skill-section-title" style="margin-top:50px;">
-              <h2>Frameworks</h2>
+              <h2>Frameworks & Libraries</h2>
             </div>
               <div class="row">
 
@@ -336,6 +346,8 @@
   </section>
 
 
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
