added projects section

--- a/profile.html
+++ b/profile.html
@@ -197,15 +197,30 @@
 
   </section>
 
+  <!-- PROJECTS SECTION -->
+
   <section id="projects">
     <div class="section-padding">
     </div>
     <div class="section-header">
       <h3>PROJECTS</h3>
     </div>
-    <div class="section-content section-content-about">
-      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A & M University, College Station.
-      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+    <div class="section-content">
+      <div class="container">
+        <div class="card" style="width:'100%';">
+          <div class="card-header">
+            DeliverBud - Hyperlocal Delivery App
+          </div>
+          <div class="card-body card-project-custom">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
