added tamu logo, fixed project cards and navbar brand alignment

--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,10 @@
 
     <!-- Navbar  -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
-      <a class="navbar-brand" href="#">HIMANSHU SINGH</a>
+      <a class="navbar-brand" href="#">
+         <img src="./images/tamu_logo.svg" width="50" height="50" class="d-inline-block align-top" alt="">
+         &nbsp;&nbsp;HIMANSHU SINGH
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -207,8 +210,9 @@
     </div>
     <div class="section-content">
       <div class="container">
-        <div class="card" style="width:'100%';">
-          <div class="card-header">
+
+        <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
             DeliverBud - Hyperlocal Delivery App
           </div>
           <div class="card-body card-project-custom">
@@ -219,8 +223,36 @@
             <a href="#" class="card-link">Another link</a>
           </div>
         </div>
-      </div>
 
+        <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
+            DeliverBud - Hyperlocal Delivery App
+          </div>
+          <div class="card-body card-project-custom">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+
+        <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
+            DeliverBud - Hyperlocal Delivery App
+          </div>
+          <div class="card-body card-project-custom">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+
+
+
+      </div>
     </div>
   </section>
 
