added images for universities and companies

--- a/profile.html
+++ b/profile.html
@@ -84,7 +84,7 @@
 
               <div class="col-lg">
                 <div class="card custom-card">
-                <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+                <img class="card-img-top" src="./images/tamu2.jpg" style=;" alt="Card image cap">
                 <div class="card-body">
                   <h3 class="card-title">Texas A & M University</h3>
                   <div class="card-desc">
@@ -98,7 +98,7 @@
 
               <div class="col-lg">
                 <div class="card custom-card">
-                <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+                <img class="card-img-top" src="./images/iiitnr.jpeg" alt="Card image cap">
                 <div class="card-body">
                   <h3 class="card-title">IIIT - Naya Raipur</h3>
                   <div class="card-desc">
@@ -129,7 +129,7 @@
 
             <div class="col-lg">
               <div class="card custom-card">
-              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <img class="card-img-top" src="./images/nus.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">National University of Singapore</h4>
                 <div class="card-desc">
@@ -143,7 +143,7 @@
 
             <div class="col-lg">
               <div class="card custom-card">
-              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <img class="card-img-top" src="./images/chi.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Centre for Homelessness Impact</h4>
                 <div class="card-desc">
@@ -157,7 +157,7 @@
 
             <div class="col-lg">
               <div class="card custom-card">
-              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <img class="card-img-top" src="./images/deloitte.jpg" alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">Deloitte USI</h4>
                 <div class="card-desc">
