--- a/profile.html
+++ b/profile.html
@@ -54,6 +54,14 @@
             <a class="nav-link" aria-current="page" href="#skills">Skills</a>
           </li>
         </ul>
+        <ul class="navbar-nav mr-right" style="margin-right:20px">
+               <li class="nav-item">
+                 <div class="bg-light" style="color:#500000; width:100px; border-radius:10px">
+                     <a class="nav-link" style="color:#500000" href="./images/Himanshu_Resume.pdf" target="_blank">Resume</a>
+                 </div>
+
+               </li>
+            </ul>
       </div>
   </nav>
 
@@ -84,7 +92,8 @@
 
               <div class="col-lg">
                 <div class="card custom-card">
-                <img class="card-img-top" src="./images/tamu2.jpg" style=;" alt="Card image cap">
+                <img class="card-img-top" src="./images/tamu2.jpg" alt="Card image cap">
+
                 <div class="card-body">
                   <h3 class="card-title">Texas A & M University</h3>
                   <div class="card-desc">
@@ -213,14 +222,13 @@
 
         <div class="card project-space" style="width:'100%';">
           <div class="card-header card-header-custom">
-            DeliverBud - Hyperlocal Delivery App
+            DNS-over-HTTPs Packet Identification using Machine Learning
           </div>
           <div class="card-body card-project-custom">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <h5 class="card-title">National University of Singapore</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Jan 2020 - Jul 2020</h6>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="#" class="card-link">GitHub</a>
           </div>
         </div>
 
@@ -229,24 +237,22 @@
             DeliverBud - Hyperlocal Delivery App
           </div>
           <div class="card-body card-project-custom">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <h5 class="card-title">Chhattisgarh, India</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Apr 2021 - Jul 2021</h6>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="#" class="card-link">GitHub</a>
           </div>
         </div>
 
         <div class="card project-space" style="width:'100%';">
           <div class="card-header card-header-custom">
-            DeliverBud - Hyperlocal Delivery App
+            Psychological Analysis of Covid-19 Tweets
           </div>
           <div class="card-body card-project-custom">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <h6 class="card-title">University of Brighton, UK</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Mar 2020 - Mar 2021</h6>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a href="#" class="card-link">GitHub</a>
           </div>
         </div>
 
@@ -273,34 +279,43 @@
           <div class="row">
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/cpp_logo.png" alt="skill image" class='skill-pic' >
               <h4>C++</h4>
             </div>
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/python-logo.png" alt="skill image" class='skill-pic' >
               <h4>Python</h4>
             </div>
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/js_logo.png" alt="skill image" class='skill-pic' >
               <h4>JavaScript</h4>
             </div>
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/html_logo.png" alt="skill image" class='skill-pic' >
               <h4>HTML</h4>
             </div>
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/css_logo.png" alt="skill image" class='skill-pic' >
               <h4>CSS</h4>
             </div>
 
             <div class="col-lg-2 skill-tile">
-              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <img src="./images/php_logo.png" alt="skill image" class='skill-pic' >
               <h4>PHP</h4>
             </div>
+            </div>
+
+            <div class="row row-second">
+
+              <div class="col-lg-2 skill-tile">
+                <img src="./images/bash_logo.png" alt="skill image" class='skill-pic' >
+                <h4>Shell / Bash</h4>
+              </div>
+
             </div>
 
             <div class="skill-section-title" style="margin-top:50px;">
@@ -309,12 +324,12 @@
               <div class="row">
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <img src="./images/sql_logo.png" alt="skill image" class='skill-pic' >
                   <h4>MySQL</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <img src="./images/Mongo_Logo.png" alt="skill image" class='skill-pic' >
                   <h4>MongoDB</h4>
                 </div>
               </div>
@@ -325,66 +340,66 @@
               <div class="row">
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <img src="./images/react_logo.png" alt="skill image" class='skill-pic' >
                   <h4>React</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <img src="./images/reactnative_logo.png" alt="skill image" class='skill-pic' >
                   <h4>React-Native</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <img src="./images/node_logo.png" alt="skill image" class='skill-pic' >
                   <h4>Node.js</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Express.js</h4>
+                  <img src="./images/django_logo.jpeg" alt="skill image" class='skill-pic' >
+                  <h4>Django</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Node.js</h4>
+                  <img src="./images/pytorch_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>PyTorch</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Express.js</h4>
+                  <img src="./images/keras_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>Keras</h4>
                 </div>
               </div>
 
               <div class="row row-second">
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>React</h4>
+                  <img src="./images/firebase_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>Firebase</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>React-Native</h4>
+                  <img src="./images/selenium_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>Selenium</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Node.js</h4>
+                  <img src="./images/git_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>Git</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Express.js</h4>
+                  <img src="./images/docker_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>Docker</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Node.js</h4>
+                  <img src="./images/wireshark_logo.jpg" alt="skill image" class='skill-pic' >
+                  <h4>Wireshark</h4>
                 </div>
 
                 <div class="col-lg-2 skill-tile">
-                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
-                  <h4>Express.js</h4>
+                  <img src="./images/opencv_logo.png" alt="skill image" class='skill-pic' >
+                  <h4>OpenCV</h4>
                 </div>
               </div>
 
