modified about section, projects section and skills section

--- a/profile.html
+++ b/profile.html
@@ -73,10 +73,23 @@
         <div class="section-header">
           <h3>ABOUT</h3>
         </div>
-        <div class="section-content section-content-about">
-          <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A & M University, College Station.
-          </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+        <div class="container">
+          <div class="section-content section-content-about">
+            <p>I am currently pursuing a Master's in Computer Science and Engineering from Texas A & M University, College Station with a
+              specialization in Artificial Interlligence (AI) and Machine Learning (ML).<br>
+              My coursework at Texas A&M revolves around the following specializations: <br>
+              <ul>
+                <li>Machine Learning</li>
+                <li>Data Science for Cybersecurity</li>
+                <li>Robotics and Spatial Intelligence</li>
+                <li>Computer Vision</li>
+                <li>Operating Systems</li>
+              </ul>
+              I am really passionate about finding practical application of AI/ML to solve challenging real world
+            problems. In my free time, I like to read, workout and think about ways to preserve the environment by leading more sustainable and efficienct lifestyles. </p>
+          </div>
         </div>
+
       </section>
 
       <!-- Education Section  -->
@@ -144,7 +157,7 @@
                 <div class="card-desc">
                   <p class="card-text"><b>Location: </b> Singapore</p>
                   <p class="card-text"><b>Duration: </b> Jan 2020 - Aug 2020</p>
-                  <p class="card-text"><b>Role: </b> Research Inter (Machine Learning)</p>
+                  <p class="card-text"><b>Role: </b> Research Intern (Machine Learning)</p>
                 </div>
               </div>
             </div>
@@ -225,9 +238,10 @@
             DNS-over-HTTPs Packet Identification using Machine Learning
           </div>
           <div class="card-body card-project-custom">
-            <h5 class="card-title">National University of Singapore</h5>
+            <h6 class="card-title">National University of Singapore</h6>
             <h6 class="card-subtitle mb-2 text-muted">Jan 2020 - Jul 2020</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Developed a highly efficient mechanism to distinguish the recently introduced DNS-over-HTTPs packets from encrypted web traffic.</p>
+            <p class="card-text"><b>Tech Stack:</b> Python(Selenium, Sklearn, Pandas, Tshark, Keras), Docker, Wireshark</p>
             <a href="#" class="card-link">GitHub</a>
           </div>
         </div>
@@ -237,9 +251,52 @@
             DeliverBud - Hyperlocal Delivery App
           </div>
           <div class="card-body card-project-custom">
-            <h5 class="card-title">Chhattisgarh, India</h5>
+            <h6 class="card-title">Chhattisgarh, India</h6>
             <h6 class="card-subtitle mb-2 text-muted">Apr 2021 - Jul 2021</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Developed a cross-platform mobile application to improve the hyperlocal delivery ecosystem in my hometown during the Covid-19 pandemic.</p>
+            <p class="card-text"><b>Tech Stack:</b> React-Native and Firebase.</p>
+            <a href="#" class="card-link">Expo</a>
+          </div>
+        </div>
+
+        <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
+            Psychological Analysis of Covid-19 Tweets
+          </div>
+          <div class="card-body card-project-custom">
+            <h6 class="card-title">University of Brighton, UK</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Mar 2020 - Mar 2021</h6>
+            <p class="card-text">In collaboration with Dr. Apurv Chauhan (Principal Lecturer @ University of Brighton, UK), performed linguistic analysis on tweets related to Covid-19
+            to understand the psychological impacts of the pandemic across 23 different countries and 5 different languages. A total of 200K unique tweets were analyzed</p>
+            <p class="card-text"><b>Tech Stack:</b> Python(Selenium, Pandas, Matplotlib, NLTK) and LIWC</p>
+            <a href="#" class="card-link">GitHub</a>
+          </div>
+        </div>
+
+        <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
+            Computer Vision Development Environment using Docker (OpenCV, PyTorch with CUDA)
+          </div>
+          <div class="card-body card-project-custom">
+            <h6 class="card-title">Chhattisgarh, India</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Mar 2020 - Mar 2021</h6>
+            <p class="card-text">Created a Docker Container ideal for computer vision related research and development. The container comes preloaded with all the necessary tools
+            like OpenCV and PyTorch while consuming the least amount of memory</p>
+            <p class="card-text"><b>Tech Stack:</b> Docker, Shell, C++ </p>
+            <a href="#" class="card-link">GitHub</a>
+          </div>
+        </div>
+
+        <!-- <div class="card project-space" style="width:'100%';">
+          <div class="card-header card-header-custom">
+            Psychological Analysis of Covid-19 Tweets
+          </div>
+          <div class="card-body card-project-custom">
+            <h6 class="card-title">University of Brighton, UK</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Mar 2020 - Mar 2021</h6>
+            <p class="card-text">In collaboration with Dr. Apurv Chauhan (Principal Lecturer @ University of Brighton, UK), performed linguistic analysis on tweets related to Covid-19
+            to understand the psychological impacts of the pandemic across 23 different countries and 5 different languages. A total of 200K unique tweets were analyzed</p>
+            <p class="card-text"><b>Tech Stack:</b> Python(Selenium, Pandas, Matplotlib, NLTK) and LIWC</p>
             <a href="#" class="card-link">GitHub</a>
           </div>
         </div>
@@ -251,10 +308,12 @@
           <div class="card-body card-project-custom">
             <h6 class="card-title">University of Brighton, UK</h6>
             <h6 class="card-subtitle mb-2 text-muted">Mar 2020 - Mar 2021</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">In collaboration with Dr. Apurv Chauhan (Principal Lecturer @ University of Brighton, UK), performed linguistic analysis on tweets related to Covid-19
+            to understand the psychological impacts of the pandemic across 23 different countries and 5 different languages. A total of 200K unique tweets were analyzed</p>
+            <p class="card-text"><b>Tech Stack:</b> Python(Selenium, Pandas, Matplotlib, NLTK) and LIWC</p>
             <a href="#" class="card-link">GitHub</a>
           </div>
-        </div>
+        </div> -->
 
 
 
@@ -274,7 +333,7 @@
 
       <div class="container">
         <div class="skill-section-title">
-          <h2>Languages</h2>
+          <h2>Languages & Softwares</h2>
         </div>
           <div class="row">
 
@@ -314,6 +373,11 @@
               <div class="col-lg-2 skill-tile">
                 <img src="./images/bash_logo.png" alt="skill image" class='skill-pic' >
                 <h4>Shell / Bash</h4>
+              </div>
+
+              <div class="col-lg-2 skill-tile">
+                <img src="./images/latex_logo.png" alt="skill image" class='skill-pic' >
+                <h4>Latex</h4>
               </div>
 
             </div>
