--- a/accessibility_task.html
+++ b/accessibility_task.html
@@ -13,7 +13,7 @@
 Repellendus fugit ipsam provident facere maxime reprehenderit eaque maiores, odit dolorum placeat molestiae enim repudiandae voluptatem ducimus? Odio minima praesentium reprehenderit explicabo ex nemo aliquam, aut modi eaque aliquid assumenda nulla illo porro iusto nostrum. Id expedita quis, quia odit sequi doloremque eligendi perspiciatis voluptates quidem fuga provident cumque ea placeat natus cupiditate, consequuntur repudiandae ad dolor ipsam suscipit? Possimus, ab in minus fugiat et vitae, eum, molestias autem dolorem sint deleniti dolore? Illum soluta rem fugit expedita quibusdam illo. Alias quas veniam assumenda magni deserunt cupiditate sit, voluptatum voluptatibus inventore magnam sunt repellat quod modi doloribus eos voluptates quidem molestias, nisi autem aspernatur libero, dolore blanditiis vero dolor! Eos cumque aliquam voluptatem, ipsum voluptatibus fuga laborum deserunt consectetur autem earum illum aspernatur iste nostrum quos veritatis, quo ipsam voluptates molestiae quaerat natus beatae! Itaque quia ut, officia nisi nostrum fugit nihil quo laudantium dicta maxime? Aliquam labore, praesentium aliquid vitae quae harum tenetur perferendis, dicta blanditiis quis asperiores iure culpa quaerat expedita nihil modi, excepturi similique animi accusantium? Sit quaerat voluptatum assumenda, at, perferendis velit explicabo praesentium neque expedita quia est ipsa ipsam dolor a, nisi consequatur quam saepe vero repellendus.</p>
 
 <a href=""></a>
-<img class="main-img" src="./images/heman.jpg" alt="Profile Pic">
+<img class="main-img" src="./images/tamu2.jpg" alt="Profile Pic">
 <img class="main-img" src="./images/react_logo.png" alt="React logo">
 
 <br>
