--- a/accessibility_task.html
+++ b/accessibility_task.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Home</title>
 </head>
 
