--- a/accessibility_task.html
+++ b/accessibility_task.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="accessibility_style.css">
     <title>Home</title>
 </head>
 
